Fixed overlay, animation, and overflow.

--- a/src/stylesheets/components/overlay.scss
+++ b/src/stylesheets/components/overlay.scss
@@ -1,6 +1,6 @@
 .overlay {
   @include fit;
-  background-color: black;
+  background-color: purple;
   display: flex;
   align-items: center;
   justify-content: center;
